# ioc2cmake

./: CMakeLists.txt  LICENSE  README.md  gen_version.cmake  ioc2cmake.py  openocd.cfg
